--- a/ClientApp/src/layout/layout.module.scss
+++ b/ClientApp/src/layout/layout.module.scss
@@ -1,4 +1,5 @@
 .narrow {
+  width: 100%;
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
