--- a/ClientApp/src/reset.css
+++ b/ClientApp/src/reset.css
@@ -1,5 +1,5 @@
 html {
-    line-height: 1.5;
+    line-height: 1.6;
     -webkit-text-size-adjust: 100%;
     font-family: system-ui, sans-serif;
     -webkit-font-smoothing: antialiased;
